force-app/main/default/objects/Bank_Account__c/fields/Opening_balance__c.field-meta.xml
<CustomField>
    <fullName>Opening_balance__c</fullName>
    <label>Opening balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>